--- a/src/main/resources/assets/warpdrive/lang/de_DE.lang
+++ b/src/main/resources/assets/warpdrive/lang/de_DE.lang
@@ -238,36 +238,36 @@ tile.warpdrive.breathing.air_generator2.name=Weiterentwickeltes Luftgenerator
 tile.warpdrive.breathing.air_generator3.name=Überlegenes Luftgenerator
 tile.warpdrive.breathing.air_shield.name=Energie-Luftschild
 
-tile.warpdrive.building.ShipScanner.name=Raumschiff Scanner
+tile.warpdrive.building.ship_scanner.name=Raumschiff Scanner
 
-tile.warpdrive.collection.LaserTreeFarm.name=Laser Baumfarm
-tile.warpdrive.collection.MiningLaser.name=Bergbau Laser
+tile.warpdrive.collection.laser_tree_farm.name=Laser Baumfarm
+tile.warpdrive.collection.mining_laser.name=Bergbau Laser
 
-tile.warpdrive.detection.Camera.name=Kamera
-tile.warpdrive.detection.CloakingCoil.name=Tarnfeld Spule
-tile.warpdrive.detection.CloakingCore.name=Tarnfeld Kern
-tile.warpdrive.detection.Monitor.name=Monitor
-tile.warpdrive.detection.Radar.name=Radar
-tile.warpdrive.detection.WarpIsolation.name=Warp-Feld Isolations Block
+tile.warpdrive.detection.camera.name=Kamera
+tile.warpdrive.detection.cloaking_coil.name=Tarnfeld Spule
+tile.warpdrive.detection.cloaking_core.name=Tarnfeld Kern
+tile.warpdrive.detection.monitor.name=Monitor
+tile.warpdrive.detection.radar.name=Radar
+tile.warpdrive.detection.warp_isolation.name=Warp-Feld Isolations Block
 
-tile.warpdrive.detection.Siren.tooltip=Ausgelöst durch ein Redstone Signal.
-tile.warpdrive.detection.Siren0.name=Industrielle Sirene
-tile.warpdrive.detection.Siren0.tooltip=Lässt einen industriellen Alarm bis zu 32 m weit ertönen.
-tile.warpdrive.detection.Siren4.name=Standard Luftschutzsirene
-tile.warpdrive.detection.Siren4.tooltip=Lässt einen Luftschutzalarm bis zu 32 m weit ertönen.
-tile.warpdrive.detection.Siren5.name=Weiterentwickelte Luftschutzsirene
-tile.warpdrive.detection.Siren5.tooltip=Lässt einen Luftschutzalarm bis zu 64 m weit ertönen.
-tile.warpdrive.detection.Siren6.name=Überlegene Luftschutzsirene
-tile.warpdrive.detection.Siren6.tooltip=Lässt einen Luftschutzalarm bis zu 128 m weit ertönen.
+tile.warpdrive.detection.siren.tooltip=Ausgelöst durch ein Redstone Signal.
+tile.warpdrive.detection.siren0.name=Industrielle Sirene
+tile.warpdrive.detection.siren0.tooltip=Lässt einen industriellen Alarm bis zu 32 m weit ertönen.
+tile.warpdrive.detection.siren4.name=Standard Luftschutzsirene
+tile.warpdrive.detection.siren4.tooltip=Lässt einen Luftschutzalarm bis zu 32 m weit ertönen.
+tile.warpdrive.detection.siren5.name=Weiterentwickelte Luftschutzsirene
+tile.warpdrive.detection.siren5.tooltip=Lässt einen Luftschutzalarm bis zu 64 m weit ertönen.
+tile.warpdrive.detection.siren6.name=Überlegene Luftschutzsirene
+tile.warpdrive.detection.siren6.tooltip=Lässt einen Luftschutzalarm bis zu 128 m weit ertönen.
 
-tile.warpdrive.energy.EnanReactorCore.name=Enantiomorpher Reaktorkern
-tile.warpdrive.energy.EnanReactorLaser.name=Enantiomorper Reaktor Stabilisierungs Laser
-tile.warpdrive.energy.EnergyBank.0.name=Null-Punkt-Modul
-tile.warpdrive.energy.EnergyBank.0.tooltip=Kreativ Subraum Kondensator
-tile.warpdrive.energy.EnergyBank.1.name=Standard Subraum Kondensator
-tile.warpdrive.energy.EnergyBank.2.name=Weiterentwickelter Subraum Kondensator
-tile.warpdrive.energy.EnergyBank.3.name=Überlegener Subraum Kondensator
-tile.warpdrive.energy.IC2ReactorLaserMonitor.name=IC2 Reaktor Laser Monitor
+tile.warpdrive.energy.enan_reactor_core.name=Enantiomorpher Reaktorkern
+tile.warpdrive.energy.enan_reactor_laser.name=Enantiomorper Reaktor Stabilisierungs Laser
+tile.warpdrive.energy.energy_bank.0.name=Null-Punkt-Modul
+tile.warpdrive.energy.energy_bank.0.tooltip=Kreativ Subraum Kondensator
+tile.warpdrive.energy.energy_bank.1.name=Standard Subraum Kondensator
+tile.warpdrive.energy.energy_bank.2.name=Weiterentwickelter Subraum Kondensator
+tile.warpdrive.energy.energy_bank.3.name=Überlegener Subraum Kondensator
+tile.warpdrive.energy.ic2_reactor_laser_monitor.name=IC2 Reaktor Laser Monitor
 
 tile.warpdrive.forcefield.block1.name=Standard Kraftfeld
 tile.warpdrive.forcefield.block2.name=Weiterentwickeltes Kraftfeld
@@ -673,16 +673,16 @@ warpdrive.video_channel.statusLine.invalid=§cVideokanal %1$d ist ungültig.
 warpdrive.video_channel.statusLine.invalidOrNotLoaded=§cVideokanal %1$d ist ungültig oder die Kamera ist zu weit weg!
 warpdrive.video_channel.statusLine.undefined=§7Nicht definierter Videokanal.\n§bNutze eine Stimmgabel§r um ihn einzustellen.
 
-warpdrive.cloakingCore.missingInnerAndOuter=§cIntegrity down to %1$d%%: missing channeling coil(s) towards %2$s and projecting coil(s) towards %3$s !!!
-warpdrive.cloakingCore.missingInner=§cIntegrity down to %1$d%%: missing channeling coil(s) towards %2$s !!!
-warpdrive.cloakingCore.missingOuter=§cIntegrity down to %1$d%%: missing projecting coil(s) towards %2$s !!!
-warpdrive.cloakingCore.valid=System is valid !!!
-warpdrive.cloakingCore.disabled=Tarnfeld ist deaktiviert!
-warpdrive.cloakingCore.lowPower=§cTarnfeld ist ausgefallen, wir brauchen mehr Energie, Captain!
-warpdrive.cloakingCore.cloaking=Ein Stufe %1$d Tarnfeld überdeckt jetzt %2$d Blöcke!
+warpdrive.cloaking_core.missingInnerAndOuter=§cIntegrity down to %1$d%%: missing channeling coil(s) towards %2$s and projecting coil(s) towards %3$s !!!
+warpdrive.cloaking_core.missingInner=§cIntegrity down to %1$d%%: missing channeling coil(s) towards %2$s !!!
+warpdrive.cloaking_core.missingOuter=§cIntegrity down to %1$d%%: missing projecting coil(s) towards %2$s !!!
+warpdrive.cloaking_core.valid=System is valid !!!
+warpdrive.cloaking_core.disabled=Tarnfeld ist deaktiviert!
+warpdrive.cloaking_core.lowPower=§cTarnfeld ist ausgefallen, wir brauchen mehr Energie, Captain!
+warpdrive.cloaking_core.cloaking=Ein Stufe %1$d Tarnfeld überdeckt jetzt %2$d Blöcke!
 
-warpdrive.IC2reactorLaserMonitor.noReactor=Kein Reaktor gefunden!
-warpdrive.IC2reactorLaserMonitor.multipleReactors=%1$d Reaktor(en) verbunden.
+warpdrive.ic2_reactor_laser_monitor.noReactor=Kein Reaktor gefunden!
+warpdrive.ic2_reactor_laser_monitor.multipleReactors=%1$d Reaktor(en) verbunden.
 
 warpdrive.transporter.status=Von (%1$.0f %2$.0f %3$.0f) zu (%4$.0f %5$.0f %6$.0f)
 warpdrive.transporter_beacon.status.invalid=§cNo transporter room linked
