--- a/src/main/resources/assets/warpdrive/lang/zh_TW.lang
+++ b/src/main/resources/assets/warpdrive/lang/zh_TW.lang
@@ -155,36 +155,36 @@ tile.warpdrive.machines.ChunkLoader.name=方塊裝載器
 tile.warpdrive.machines.Laser.name=鐳射
 tile.warpdrive.machines.LaserMedium.name=鐳射單元 (粒子加速器)
 
-tile.warpdrive.building.ShipScanner.name=船隻掃描儀
+tile.warpdrive.building.ship_scanner.name=船隻掃描儀
 
-tile.warpdrive.collection.LaserTreeFarm.name=激光樹農場
-tile.warpdrive.collection.MiningLaser.name=采礦鐳射
+tile.warpdrive.collection.laser_tree_farm.name=激光樹農場
+tile.warpdrive.collection.mining_laser.name=采礦鐳射
 
-tile.warpdrive.detection.Camera.name=相機
-tile.warpdrive.detection.CloakingCoil.name=偽裝線圈
-tile.warpdrive.detection.CloakingCore.name=僞裝核心
-tile.warpdrive.detection.Monitor.name=監控
-tile.warpdrive.detection.Radar.name=雷達
-tile.warpdrive.detection.WarpIsolation.name=躍遷力場隔絕方塊
+tile.warpdrive.detection.camera.name=相機
+tile.warpdrive.detection.cloaking_coil.name=偽裝線圈
+tile.warpdrive.detection.cloaking_core.name=僞裝核心
+tile.warpdrive.detection.monitor.name=監控
+tile.warpdrive.detection.radar.name=雷達
+tile.warpdrive.detection.warp_isolation.name=躍遷力場隔絕方塊
 
-tile.warpdrive.detection.Siren.tooltip=由紅石觸發
-tile.warpdrive.detection.Siren0.name=警報器
-tile.warpdrive.detection.Siren0.tooltip=距離32格範圍内有警報器發出了警報。
-tile.warpdrive.detection.Siren4.name=空襲警報器
-tile.warpdrive.detection.Siren4.tooltip=距離32格範圍内有空襲警報器發出了警報。
-tile.warpdrive.detection.Siren5.name=進階空襲警報器
-tile.warpdrive.detection.Siren5.tooltip=距離64格範圍内有空襲警報器發出了警報。
-tile.warpdrive.detection.Siren6.name=高階空襲警報器
-tile.warpdrive.detection.Siren6.tooltip=距離128格範圍内有空襲警報器發出了警報。
+tile.warpdrive.detection.siren.tooltip=由紅石觸發
+tile.warpdrive.detection.siren0.name=警報器
+tile.warpdrive.detection.siren0.tooltip=距離32格範圍内有警報器發出了警報。
+tile.warpdrive.detection.siren4.name=空襲警報器
+tile.warpdrive.detection.siren4.tooltip=距離32格範圍内有空襲警報器發出了警報。
+tile.warpdrive.detection.siren5.name=進階空襲警報器
+tile.warpdrive.detection.siren5.tooltip=距離64格範圍内有空襲警報器發出了警報。
+tile.warpdrive.detection.siren6.name=高階空襲警報器
+tile.warpdrive.detection.siren6.tooltip=距離128格範圍内有空襲警報器發出了警報。
 
-tile.warpdrive.energy.EnanReactorCore.name=核反應堆核
-tile.warpdrive.energy.EnanReactorLaser.name=反應堆穩定激光
-tile.warpdrive.energy.EnergyBank.0.name=零點模具
-tile.warpdrive.energy.EnergyBank.0.tooltip=創造子空間電容
-tile.warpdrive.energy.EnergyBank.1.name=基本子空間電容
-tile.warpdrive.energy.EnergyBank.2.name=進階子空間電容
-tile.warpdrive.energy.EnergyBank.3.name=高級子空間電容器
-tile.warpdrive.energy.IC2ReactorLaserMonitor.name=IC2 反應堆激光監視器
+tile.warpdrive.energy.enan_reactor_core.name=核反應堆核
+tile.warpdrive.energy.enan_reactor_laser.name=反應堆穩定激光
+tile.warpdrive.energy.energy_bank.0.name=零點模具
+tile.warpdrive.energy.energy_bank.0.tooltip=創造子空間電容
+tile.warpdrive.energy.energy_bank.1.name=基本子空間電容
+tile.warpdrive.energy.energy_bank.2.name=進階子空間電容
+tile.warpdrive.energy.energy_bank.3.name=高級子空間電容器
+tile.warpdrive.energy.ic2_reactor_laser_monitor.name=IC2 反應堆激光監視器
 
 tile.warpdrive.forcefield.block1.name=基本力場方塊
 tile.warpdrive.forcefield.block2.name=進階力場方塊
@@ -454,13 +454,13 @@ warpdrive.videoChannel.statusLine.invalid=§c視頻頻道 %1$d 是無效的。
 warpdrive.videoChannel.statusLine.invalidOrNotLoaded=§c視頻頻道 %1$d 是無效的或者錄像機太過遙遠。 
 warpdrive.videoChannel.statusLine.undefined=§7未定義的視頻通道。\n§bUse 調音叉§r 來設定。
 
-warpdrive.cloakingCore.invalidAssembly=§c裝配無效！
-warpdrive.cloakingCore.disabled=僞裝無效！
-warpdrive.cloakingCore.lowPower=§c僞裝失效了，我們需要更多的能量！艦長！
-warpdrive.cloakingCore.cloaking=A 層 %1$d 僞裝目前正確覆蓋 %2$d 區域！
+warpdrive.cloaking_core.invalidAssembly=§c裝配無效！
+warpdrive.cloaking_core.disabled=僞裝無效！
+warpdrive.cloaking_core.lowPower=§c僞裝失效了，我們需要更多的能量！艦長！
+warpdrive.cloaking_core.cloaking=A 層 %1$d 僞裝目前正確覆蓋 %2$d 區域！
 
-warpdrive.IC2reactorLaserMonitor.noReactor=沒有反應堆！
-warpdrive.IC2reactorLaserMonitor.multipleReactors=%1$d 反應器連接。
+warpdrive.ic2_reactor_laser_monitor.noReactor=沒有反應堆！
+warpdrive.ic2_reactor_laser_monitor.multipleReactors=%1$d 反應器連接。
 
 warpdrive.transporter.status=From (%1$.0f %2$.0f %3$.0f) to (%4$.0f %5$.0f %6$.0f)
 warpdrive.transporter_beacon.status.invalid=§cNo transporter room linked
