Fixed regression in video channels reported status

--- a/src/main/resources/assets/warpdrive/lang/de_DE.lang
+++ b/src/main/resources/assets/warpdrive/lang/de_DE.lang
@@ -669,8 +669,8 @@ warpdrive.upgrade.status_line.valid=%1$s Upgrade installiert.
 warpdrive.video_channel.tooltip=Videokanal auf %1$d gestellt 
 warpdrive.video_channel.get=Videokanal %2$d wurde von %1$s abgerufen
 warpdrive.video_channel.set=%1$s ist jetzt auf Videokanal %2$d gestellt
-warpdrive.video_channel.status_line.valid=Videokanal %1$d ist gültig.
-warpdrive.video_channel.status_line.validCamera=Videokanal %1$d ist gültig für die Kamera bei %2$d, %3$d, %4$d.
+warpdrive.video_channel.status_line.valid_camera=Videokanal %1$d ist gültig.
+warpdrive.video_channel.status_line.valid_monitor=Videokanal %1$d ist gültig für die Kamera bei %2$d, %3$d, %4$d.
 warpdrive.video_channel.status_line.invalid=§cVideokanal %1$d ist ungültig.
 warpdrive.video_channel.status_line.not_loaded=§cVideokanal %1$d ist ungültig oder die Kamera ist zu weit weg!
 warpdrive.video_channel.status_line.undefined=§7Nicht definierter Videokanal.\n§bNutze eine Stimmgabel§r um ihn einzustellen.
