--- a/src/main/resources/assets/warpdrive/lang/en_US.lang
+++ b/src/main/resources/assets/warpdrive/lang/en_US.lang
@@ -666,8 +666,8 @@ warpdrive.upgrade.status_line.valid=Upgraded with %1$s.
 warpdrive.video_channel.tooltip=Video channel is set to %1$d
 warpdrive.video_channel.get=Video channel %2$d has been retrieved from %1$s
 warpdrive.video_channel.set=%1$s is now tuned to Video channel %2$d
-warpdrive.video_channel.status_line.valid=Video channel %1$d is valid.
-warpdrive.video_channel.status_line.validCamera=Video channel %1$d is valid for camera at %2$d, %3$d, %4$d.
+warpdrive.video_channel.status_line.valid_camera=Video channel %1$d is valid.
+warpdrive.video_channel.status_line.valid_monitor=Video channel %1$d is valid for camera at %2$d, %3$d, %4$d.
 warpdrive.video_channel.status_line.invalid=§cVideo channel %1$d is invalid.
 warpdrive.video_channel.status_line.not_loaded=§cVideo channel %1$d is invalid or camera is too far away!
 warpdrive.video_channel.status_line.undefined=§7Undefined Video channel.\n§bUse a Tuning fork§r to set it.
