--- a/src/main/resources/assets/warpdrive/lang/fr_FR.lang
+++ b/src/main/resources/assets/warpdrive/lang/fr_FR.lang
@@ -666,8 +666,8 @@ warpdrive.upgrade.status_line.valid=Augmenté avec %1$s.
 warpdrive.video_channel.tooltip=Canal vidéo ajusté à %1$d
 warpdrive.video_channel.get=Le canal vidéo %2$d a été recupéré depuis %1$s
 warpdrive.video_channel.set=%1$s est désormais accordé au Canal vidéo %2$d
-warpdrive.video_channel.status_line.valid=Le canal vidéo %1$d est valide.
-warpdrive.video_channel.status_line.validCamera=Le canal vidéo %1$d est valide pour la caméra à %2$d %3$d %4$d.
+warpdrive.video_channel.status_line.valid_camera=Le canal vidéo %1$d est valide.
+warpdrive.video_channel.status_line.valid_monitor=Le canal vidéo %1$d est valide pour la caméra à %2$d %3$d %4$d.
 warpdrive.video_channel.status_line.invalid=§cLe canal vidéo %1$d est invalide.
 warpdrive.video_channel.status_line.not_loaded=§cLe canal vidéo %1$d est invalide ou la caméra est trop loin!
 warpdrive.video_channel.status_line.undefined=§7Le canal vidéo est non défini.\n§bUtilises un Diapason§r pour l'ajuster.
