--- a/src/main/resources/assets/warpdrive/lang/nl_NL.lang
+++ b/src/main/resources/assets/warpdrive/lang/nl_NL.lang
@@ -666,8 +666,8 @@ warpdrive.upgrade.status_line.valid=Geupgrade met1$s.
 warpdrive.video_channel.tooltip=Videokanaal is gezet naar %1$d
 warpdrive.video_channel.get=Videokanaal %2$d is achterhaald door %1$s
 warpdrive.video_channel.set=%1$s is nu afgestemd op videokanaal %2$d
-warpdrive.video_channel.status_line.valid=Videokanaal %1$d is geldig.
-warpdrive.video_channel.status_line.validCamera=Videokanaal %1$d is geldig voor camera op %2$d, %3$d, %4$d.
+warpdrive.video_channel.status_line.valid_camera=Videokanaal %1$d is geldig.
+warpdrive.video_channel.status_line.valid_monitor=Videokanaal %1$d is geldig voor camera op %2$d, %3$d, %4$d.
 warpdrive.video_channel.status_line.invalid=§cVideokanaal %1$d is ongeldig.
 warpdrive.video_channel.status_line.not_loaded=§cVideokanaal %1$d is ongeldig of camera is te ver weg!
 warpdrive.video_channel.status_line.undefined=§7niet gedefinieerd videokanaal.\n§bGebruik een Afstemmingsvork§r om het te zetten.
