--- a/src/main/resources/assets/warpdrive/lang/ru_RU.lang
+++ b/src/main/resources/assets/warpdrive/lang/ru_RU.lang
@@ -666,8 +666,8 @@ warpdrive.upgrade.status_line.valid=Upgraded with %1$s.
 warpdrive.video_channel.tooltip=Видеоканал установлен на %1$d
 warpdrive.video_channel.get=Video channel %2$d has been retrieved from %1$s
 warpdrive.video_channel.set=%1$s настроен на видеоканал %2$d
-warpdrive.video_channel.status_line.valid=Видеоканал %1$d действителен.
-warpdrive.video_channel.status_line.validCamera=Видеоканал %1$d действителен для камеры на %2$d, %3$d, %4$d.
+warpdrive.video_channel.status_line.valid_camera=Видеоканал %1$d действителен.
+warpdrive.video_channel.status_line.valid_monitor=Видеоканал %1$d действителен для камеры на %2$d, %3$d, %4$d.
 warpdrive.video_channel.status_line.invalid=§cВидеоканал %1$d недействителен.
 warpdrive.video_channel.status_line.not_loaded=§cВидеоканал %1$d недействителен или камера слишком далеко.
 warpdrive.video_channel.status_line.undefined=§7Undefined Video channel.\n§bUse a Tuning fork§r to set it.
