--- a/src/main/resources/assets/warpdrive/lang/zh_CN.lang
+++ b/src/main/resources/assets/warpdrive/lang/zh_CN.lang
@@ -666,8 +666,8 @@ warpdrive.upgrade.status_line.valid=用升级%1$s.
 warpdrive.video_channel.tooltip-tbc=频道设置为%1$d
 warpdrive.video_channel.get=视频频道 %2$d 已从频道 %1$s 断开
 warpdrive.video_channel.set=%1$s正在切换至频道%2$d
-warpdrive.video_channel.status_line.valid=视频通道%1$d有效
-warpdrive.video_channel.status_line.validCamera=相机的视频通道 %1$d有效，位于%2$d, %3$d, %4$d.
+warpdrive.video_channel.status_line.valid_camera=视频通道%1$d有效
+warpdrive.video_channel.status_line.valid_monitor=相机的视频通道 %1$d有效，位于%2$d, %3$d, %4$d.
 warpdrive.video_channel.status_line.invalid=§c视频通道 %1$d 无效.
 warpdrive.video_channel.status_line.not_loaded=§c视频通道 %1$d 无效或者是相机的距离太远!
 warpdrive.video_channel.status_line.undefined=§7未定义的视频通道.\n§b使用一个音叉§r 去设置它.
