--- a/src/main/resources/assets/warpdrive/lang/zh_TW.lang
+++ b/src/main/resources/assets/warpdrive/lang/zh_TW.lang
@@ -664,7 +664,7 @@ warpdrive.upgrade.status_line.valid=已升級 %1$s.
 warpdrive.video_channel.tooltip=視頻頻道設置為 %1$d
 warpdrive.video_channel.get=Video channel %2$d has been retrieved from %1$s
 warpdrive.video_channel.set=%1$s 現在調整為視頻頻道 %2$d
-warpdrive.video_channel.status_line.valid=視頻頻道 %1$d 有效。
+warpdrive.video_channel.status_line.valid_camera=視頻頻道 %1$d 有效。
 warpdrive.video_channel.status_line.validCamera視頻頻道 %1$d 對於攝像機 %2$d, %3$d, %4$d 有效
 warpdrive.video_channel.status_line.invalid=§c視頻頻道 %1$d 是無效的。
 warpdrive.video_channel.status_line.not_loaded=§c視頻頻道 %1$d 是無效的或者錄像機太過遙遠。
